--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "namaste_react_practice",
   "version": "1.0.0",
   "description": "practice react",
-  "main": "App.js",
   "scripts": {
     "test": "jest"
   },
@@ -18,5 +17,9 @@
   "homepage": "https://github.com/arunpanigrahi93/namaste-react#readme",
   "devDependencies": {
     "parcel": "^2.15.2"
+  },
+  "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
